# CIS6930_T7_MTRAG

./: .gitignore  README.md  agg_metrics.py  finetune.py  mtrag_dataset.py  mtrag_utils.py  pyproject.toml
notebooks/: plot.ipynb  pre_process.ipynb
scripts/: examples.py  reeval.py
